--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,8 @@
 // Color
-$primary-color: #0284A8;
+$primary-color: #FF3814; /* accent color */
+$light-brown: #C9B49D; /* used for axis on chart */
+$dark-brown: #735C45; /* used for text on charts, figcaption */
+$background-color: #EDE6DE;
 
 // Space
 $vertical-padding: 20px;
