--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,7 @@
 $primary-color: #FF3814; /* accent color */
 $light-brown: #C9B49D; /* used for axis on chart */
 $dark-brown: #735C45; /* used for text on charts, figcaption */
+$font-brown: #52412F;
 $background-color: #EDE6DE;
 
 // Space
