--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,8 +9,10 @@ $background-color: #EDE6DE;
 $vertical-padding: 20px;
 
 // Font
-$mono-font: 'PT Mono', monospace;
-$sans-font: 'PT Sans', sans-serif;
+$big-font: 'Oswald', sans-serif;
+$byline-font: 'Roboto', sans-serif;
+$title-font: 'Merriweather', serif;
+$text-font: 'Open Sans', sans-serif;
 
 // Layout
 $S: 480px;
