--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,7 +1,10 @@
 // media queries
 
 @mixin MQ($canvas) {
-  @if $canvas == S {
+  @if $canvas == XS {
+    @media only screen and (max-width: $XS) { @content; }
+  }
+    @else if $canvas == S {
     @media only screen and (max-width: $S) { @content; }
   }
   @else if $canvas == M {
