--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,6 +15,8 @@ $title-font: 'Merriweather', serif;
 $text-font: 'Open Sans', sans-serif;
 
 // Layout
+$XS: 320px;
 $S: 480px;
 $M: 768px;
 $L: 1000px;
+$XL: 1800px;
