--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -15,3 +15,8 @@
     @media only screen and (max-width: $L) { @content; }
   }
 }
+
+@mixin font-size($sizeValue: 1.6) {
+  font-size: ($sizeValue * 10) + px;
+  font-size: $sizeValue + rem;
+}
