--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,7 +28,6 @@ body {
 }
 
 .container {
-  -webkit-backface-visibility: hidden;
   margin: 0 auto;
   max-width: $XL;
   background-color: $background-color;
@@ -42,6 +41,8 @@ body {
 }
 
 header {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   padding-bottom: $vertical-padding;
 }
 
@@ -313,7 +314,7 @@ a {
 .axis--y .tick text {
   font-family: $text-font;
   fill: $dark-brown;
-  font-size: 10px;
+  @include font-size(1);
   alignment-baseline: text-after-edge;
   /*@include MQ(S) {
     font-size: 12px;
@@ -321,35 +322,35 @@ a {
 }
 
 .axis--x text {
-  font-size: 13px;
+  @include font-size(1.3);
   font-family: $text-font;
   fill: $dark-brown;
   @include MQ(S) {
-    font-size: 12px;
+    @include font-size(1.2);
   }
 }
 
 .bar-value {
-  font-size: 13px;
+  @include font-size(1.3);
   font-family: $text-font;
   fill: $dark-brown;
   font-weight: 700;
   @include MQ(S) {
-    font-size: 10px;
+    @include font-size(1);
   }
 }
 
 .chart-title text {
-  font-size: 16px;
+  @include font-size(1.6);
   font-weight: 700;
 }
 
 .stations-text {
   cursor: pointer;
   fill: $font-brown;
-  font-size: 16px;
+  @include font-size(1.6);
   @include MQ(S) {
-    font-size: 14px;
+    @include font-size(1.4);
   }
 }
 
@@ -358,7 +359,7 @@ a {
   animation: showIntro 1.5s ease-in 6s forwards;
   & text {
   fill: $light-brown;
-  font-size: 14px;
+  @include font-size(1.4);
   font-weight: 700;
 }
 }
@@ -390,7 +391,7 @@ a {
     @include font-size(3);
     margin-bottom: $vertical-padding;
     @include MQ(S) {
-      font-size: 20px;
+      @include font-size(2);
     }
   }
   @include MQ(S) {
@@ -408,7 +409,7 @@ a {
 
 .close {
   opacity: 0;
-  font-size: 35px;
+  @include font-size(3.5);
   font-weight: 700;
   position: absolute;
   left: 90%;
@@ -421,7 +422,7 @@ a {
 }
 
 .sidebar-intro {
-  font-size: 18px;
+  @include font-size(1.8);
 }
 
 .poster {
@@ -437,10 +438,10 @@ a {
   &-label {
     font-family: $byline-font;
     font-weight: 500;
-    font-size: 24px;
+    @include font-size(2.4);
     padding-top: 5px;
      @include MQ(S) {
-      font-size: 18px;
+      @include font-size(1.8);
     }
   }
 }
