--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -226,12 +226,17 @@ h4 {
   font-weight: 500;
   @include MQ(S) {
     font-size: 24px;
+    margin-bottom: $vertical-padding;
   }
 }
 
 p {
   margin-bottom: $vertical-padding;
   clear: both;
+  @include MQ(S) {
+     margin-bottom: $vertical-padding / 2;
+
+  }
 }
 
 b {
@@ -480,5 +485,83 @@ a {
   width: 100%;
   height: 100%;
 }
+
+.quiz-overlay {
+  text-align: center;
+  margin-bottom: $vertical-padding;
+}
+
+.headline {
+  padding-bottom: 5px;
+  font-weight: 400;
+  font-family: $title-font;
+  @include font-size(1.5);
+  display: block;
+  color: $dark-brown;
+}
+
+.stereotype {
+  padding-bottom: 5px;
+  font-weight: 700;
+  display: block;
+}
+
+.quiz-button {
+  border-radius: 5px;
+  border: 2px solid;
+  font-weight: 700;
+  line-height: 1.125rem;
+  padding: .8rem 0;
+  text-align: center;
+  vertical-align: center;
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+  letter-spacing: .05em;
+  width: 15%;
+  margin: 1% 1.25%;
+  background-color: $background-color;
+  border-color: $primary-color;
+  color: $primary-color;
+  @include font-size(1.5);
+  text-decoration: none;
+  outline: none;
+  @include MQ(S) {
+    width: 30%;
+  }
+
+}
+
+.yes {
+  border-color: #00B268;
+  color: #00B268;
+}
+
+.question-mark {
+  fill: $dark-brown;
+  font-weight: 700;
+  @include font-size(30);
+  @include MQ(S) {
+    @include font-size(20);
+  }
+}
+
+.resolution {
+  font-weight: 700;
+  padding-top: $vertical-padding / 2;
+}
+
+.right {
+  display: none;
+  opacity: 0;
+
+}
+
+.wrong {
+  display: none;
+  opacity: 0;
+}
+
+
 
 /*#A0BEC9*/
