--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,8 +11,13 @@ $vertical-padding: 20px;
 // Font
 $big-font: 'Oswald', sans-serif;
 $byline-font: 'Roboto', sans-serif;
-$title-font: 'Merriweather', serif;
-$text-font: 'Open Sans', sans-serif;
+
+
+/*$title-font: 'Merriweather', serif;*/
+
+/*$text-font: 'Open Sans', sans-serif;*/
+$title-font: 'Libre Baskerville', serif;
+$text-font:  'Poppins', sans-serif;
 
 // Layout
 $XS: 320px;
